--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^5.4.0",
     "@ant-design/pro-components": "^2.7.14",
     "@ant-design/pro-layout": "^7.19.11",
+    "@tabler/icons-react": "^3.11.0",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
     "react": "^18.3.1",
